@@ -2,7 +2,7 @@
 #
 #    This file is part of Pretty Curved Privacy (pcp1).
 #
-#    Copyright (C) 2013 T.Linden.
+#    Copyright (C) 2013-2015 T.v.Dein.
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -259,55 +259,15 @@ temporarily disabled
 
 #
 # symetric encryption test
-# FIXME: we currently use -V ve, but this one has to work without a vault
 <test check-sym-encrypt>
-  cmd = echo HELLOWORLD | $pcp -V ve -e -O testsymencrypted -x a
+  cmd = echo HELLOWORLD | $pcp -e -O testsymencrypted -x a
   expect = /symetrically/
 </test>
 <test check-sym-decrypt>
-  cmd = $pcp -V ve -d -I testsymencrypted -x a
+  cmd = $pcp -d -I testsymencrypted -x a
   expect = /HELLO/
 </test>
 
-#
-# check usage of unencrypted secret key
-<test vcl>
-  prepare = rm -f vb2 vcl
-  <test check-vcl-crypto-unencrypted-secret>
-    cmd = (echo dau; echo foo; echo yes) | $pcp -V vcl -k -x "n/a"
-    expect = /added to/
-  </test>
-  
-  <test check-vcl-prepare-import-bpub>
-    cmd = $pcp -V vcl -I key-bobby-pub -K
-    expect = /added/
-  </test>
-
-  <test check-vcl-export-unencrypted-pubkey>
-    cmd = $pcp -V vcl -p -O testkeyvcl
-    expect = /exported/
-  </test>
-
-  <test check-vcl-import-bsecret>
-    cmd = $pcp -V vb2 -K -I key-bobby-sec -x b
-    expect = /${idbobby}/
-  </test>
-
-  <test check-vcl-import-unencrypted-pubkey>
-    cmd =  $pcp -V vb2 -K -I testkeyvcl
-    expect = /added/
-  </test>
-
-  <test check-vcl-crypto-unencrypted-secret-message>
-    cmd     = echo HALLO | $pcp -V vcl -e -O testencrypted -i ${idbobby}
-    expect  = /Bobby/
-  </test>
-
-  <test check-vcl-crypto-unencrypted-secret-read>
-    cmd = $pcp -V vb2 -d -I testencrypted -x b
-    expect  = /HALLO/
-  </test>
-</test>
 
 #
 # signature tests
